--- a/setup.cfg
+++ b/setup.cfg
@@ -34,131 +34,131 @@ precli.parsers =
 
 precli.rules.go =
     # precli/rules/go/golang_org_x_crypto_ssh/ssh_insecure_ignore_hostkey.py
-    PRE1501 = precli.rules.go.golang_org_x_crypto_ssh.ssh_insecure_ignore_hostkey:SshInsecureIgnoreHostKey
+    GO501 = precli.rules.go.golang_org_x_crypto_ssh.ssh_insecure_ignore_hostkey:SshInsecureIgnoreHostKey
 
 precli.rules.python =
     # precli/rules/python/stdlib/assert/assert.py
-    PRE0001 = precli.rules.python.stdlib.assert.assert:Assert
+    PY001 = precli.rules.python.stdlib.assert.assert:Assert
 
     # precli/rules/python/stdlib/crypt/crypt_weak_hash.py
-    PRE0002 = precli.rules.python.stdlib.crypt.crypt_weak_hash:CryptWeakHash
+    PY002 = precli.rules.python.stdlib.crypt.crypt_weak_hash:CryptWeakHash
 
     # precli/rules/python/stdlib/ftplib/ftp_cleartext.py
-    PRE0003 = precli.rules.python.stdlib.ftplib.ftp_cleartext:FtpCleartext
+    PY003 = precli.rules.python.stdlib.ftplib.ftp_cleartext:FtpCleartext
 
     # precli/rules/python/stdlib/hashlib/hashlib_weak_hash.py
-    PRE0004 = precli.rules.python.stdlib.hashlib.hashlib_weak_hash:HashlibWeakHash
+    PY004 = precli.rules.python.stdlib.hashlib.hashlib_weak_hash:HashlibWeakHash
 
     # precli/rules/python/stdlib/hmac/hmac_timing_attack.py
-    PRE0005 = precli.rules.python.stdlib.hmac.hmac_timing_attack:HmacTimingAttack
+    PY005 = precli.rules.python.stdlib.hmac.hmac_timing_attack:HmacTimingAttack
 
     # precli/rules/python/stdlib/hmac/hmac_weak_hash.py
-    PRE0006 = precli.rules.python.stdlib.hmac.hmac_weak_hash:HmacWeakHash
+    PY006 = precli.rules.python.stdlib.hmac.hmac_weak_hash:HmacWeakHash
 
     # precli/rules/python/stdlib/imaplib/imap_cleartext.py
-    PRE0007 = precli.rules.python.stdlib.imaplib.imap_cleartext:ImapCleartext
+    PY007 = precli.rules.python.stdlib.imaplib.imap_cleartext:ImapCleartext
 
     # precli/rules/python/stdlib/json/json_load.py
-    PRE0008 = precli.rules.python.stdlib.json.json_load:JsonLoad
+    PY008 = precli.rules.python.stdlib.json.json_load:JsonLoad
 
     # precli/rules/python/stdlib/logging/insecure_listen_config.py
-    PRE0009 = precli.rules.python.stdlib.logging.insecure_listen_config:InsecureListenConfig
+    PY009 = precli.rules.python.stdlib.logging.insecure_listen_config:InsecureListenConfig
 
     # precli/rules/python/stdlib/marshal/marshal_load.py
-    PRE0010 = precli.rules.python.stdlib.marshal.marshal_load:MarshalLoad
+    PY010 = precli.rules.python.stdlib.marshal.marshal_load:MarshalLoad
 
     # precli/rules/python/stdlib/nntplib/nntp_cleartext.py
-    PRE0011 = precli.rules.python.stdlib.nntplib.nntp_cleartext:NntpCleartext
+    PY011 = precli.rules.python.stdlib.nntplib.nntp_cleartext:NntpCleartext
 
     # precli/rules/python/stdlib/pickle/pickle_load.py
-    PRE0012 = precli.rules.python.stdlib.pickle.pickle_load:PickleLoad
+    PY012 = precli.rules.python.stdlib.pickle.pickle_load:PickleLoad
 
     # precli/rules/python/stdlib/poplib/pop_cleartext.py
-    PRE0013 = precli.rules.python.stdlib.poplib.pop_cleartext:PopCleartext
+    PY013 = precli.rules.python.stdlib.poplib.pop_cleartext:PopCleartext
 
     # precli/rules/python/stdlib/shelve/shelve_open.py
-    PRE0014 = precli.rules.python.stdlib.shelve.shelve_open:ShelveOpen
+    PY014 = precli.rules.python.stdlib.shelve.shelve_open:ShelveOpen
 
     # precli/rules/python/stdlib/smtplib/smtp_cleartext.py
-    PRE0015 = precli.rules.python.stdlib.smtplib.smtp_cleartext:SmtpCleartext
+    PY015 = precli.rules.python.stdlib.smtplib.smtp_cleartext:SmtpCleartext
 
     # precli/rules/python/stdlib/ssl/create_unverified_context.py
-    PRE0016 = precli.rules.python.stdlib.ssl.create_unverified_context:CreateUnverifiedContext
+    PY016 = precli.rules.python.stdlib.ssl.create_unverified_context:CreateUnverifiedContext
 
     # precli/rules/python/stdlib/ssl/insecure_tls_version.py
-    PRE0017 = precli.rules.python.stdlib.ssl.insecure_tls_version:InsecureTlsVersion
+    PY017 = precli.rules.python.stdlib.ssl.insecure_tls_version:InsecureTlsVersion
 
     # precli/rules/python/stdlib/telnetlib/telnetlib_cleartext.py
-    PRE0018 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
+    PY018 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
 
     # precli/rules/python/stdlib/tempfile/mktemp_race_condition.py
-    PRE0019 = precli.rules.python.stdlib.tempfile.mktemp_race_condition:MktempRaceCondition
+    PY019 = precli.rules.python.stdlib.tempfile.mktemp_race_condition:MktempRaceCondition
 
     # precli/rules/python/aiohttp/no_certificate_verify.py
-    PRE0501 = precli.rules.python.aiohttp.no_certificate_verify:NoCertificateVerify
+    PY501 = precli.rules.python.aiohttp.no_certificate_verify:NoCertificateVerify
 
     # precli/rules/python/cryptography/cryptography_weak_cipher.py
-    PRE0502 = precli.rules.python.cryptography.cryptography_weak_cipher:CryptographyWeakCipher
+    PY502 = precli.rules.python.cryptography.cryptography_weak_cipher:CryptographyWeakCipher
 
     # precli/rules/python/cryptography/cryptography_weak_cipher_mode.py
-    PRE0503 = precli.rules.python.cryptography.cryptography_weak_cipher_mode:CryptographyWeakCipherMode
+    PY503 = precli.rules.python.cryptography.cryptography_weak_cipher_mode:CryptographyWeakCipherMode
 
     # precli/rules/python/cryptography/cryptography_weak_hash.py
-    PRE0504 = precli.rules.python.cryptography.cryptography_weak_hash:CryptographyWeakHash
+    PY504 = precli.rules.python.cryptography.cryptography_weak_hash:CryptographyWeakHash
 
     # precli/rules/python/cryptography/cryptography_weak_key.py
-    PRE0505 = precli.rules.python.cryptography.cryptography_weak_key:CryptographyWeakKey
+    PY505 = precli.rules.python.cryptography.cryptography_weak_key:CryptographyWeakKey
 
     # precli/rules/python/dill/dill_load.py
-    PRE0506 = precli.rules.python.dill.dill_load:DillLoad
+    PY506 = precli.rules.python.dill.dill_load:DillLoad
 
     # precli/rules/python/httpx/no_certificate_verify.py
-    PRE0507 = precli.rules.python.httpx.no_certificate_verify:NoCertificateVerify
+    PY507 = precli.rules.python.httpx.no_certificate_verify:NoCertificateVerify
 
     # precli/rules/python/jsonpickle/jsonpickle_decode.py
-    PRE0508 = precli.rules.python.jsonpickle.jsonpickle_decode:JsonpickleDecode
+    PY508 = precli.rules.python.jsonpickle.jsonpickle_decode:JsonpickleDecode
 
     # precli/rules/python/M2Crypto/m2crypto_weak_key.py
-    PRE0509 = precli.rules.python.M2Crypto.m2crypto_weak_key:M2CryptoWeakKey
+    PY509 = precli.rules.python.M2Crypto.m2crypto_weak_key:M2CryptoWeakKey
 
     # precli/rules/python/pandas/pandas_read_pickle.py
-    PRE0510 = precli.rules.python.pandas.pandas_read_pickle:PandasReadPickle
+    PY510 = precli.rules.python.pandas.pandas_read_pickle:PandasReadPickle
 
     # precli/rules/python/paramiko/paramiko_no_host_key_verify.py
-    PRE0511 = precli.rules.python.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
+    PY511 = precli.rules.python.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
 
     # precli/rules/python/pycrypto/pycrypto_weak_cipher.py
-    PRE0512 = precli.rules.python.pycrypto.pycrypto_weak_cipher:PycryptoWeakCipher
+    PY512 = precli.rules.python.pycrypto.pycrypto_weak_cipher:PycryptoWeakCipher
 
     # precli/rules/python/pycrypto/pycrypto_weak_hash.py
-    PRE0513 = precli.rules.python.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+    PY513 = precli.rules.python.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
 
     # precli/rules/python/pycrypto/pycrypto_weak_key.py
-    PRE0514 = precli.rules.python.pycrypto.pycrypto_weak_key:PycryptoWeakKey
+    PY514 = precli.rules.python.pycrypto.pycrypto_weak_key:PycryptoWeakKey
 
     # precli/rules/python/pycryptodomex/pycryptodomex_weak_cipher.py
-    PRE0515 = precli.rules.python.pycryptodomex.pycryptodomex_weak_cipher:PycryptodomexWeakCipher
+    PY515 = precli.rules.python.pycryptodomex.pycryptodomex_weak_cipher:PycryptodomexWeakCipher
 
     # precli/rules/python/pycryptodomex/pycryptodomex_weak_hash.py
-    PRE0516 = precli.rules.python.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+    PY516 = precli.rules.python.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
 
     # precli/rules/python/pycryptodomex/pycryptodomex_weak_key.py
-    PRE0517 = precli.rules.python.pycryptodomex.pycryptodomex_weak_key:PycryptodomexWeakKey
+    PY517 = precli.rules.python.pycryptodomex.pycryptodomex_weak_key:PycryptodomexWeakKey
 
     # precli/rules/python/pyghmi/pyghmi_cleartext.py
-    PRE0518 = precli.rules.python.pyghmi.pyghmi_cleartext:PyghmiCleartext
+    PY518 = precli.rules.python.pyghmi.pyghmi_cleartext:PyghmiCleartext
 
     # precli/rules/python/pyopenssl/insecure_tls_method.py
-    PRE0519 = precli.rules.python.pyopenssl.insecure_tls_method:InsecureTlsMethod
+    PY519 = precli.rules.python.pyopenssl.insecure_tls_method:InsecureTlsMethod
 
     # precli/rules/python/pyopenssl/pyopenssl_weak_key.py
-    PRE0520 = precli.rules.python.pyopenssl.pyopenssl_weak_key:PyopensslWeakKey
+    PY520 = precli.rules.python.pyopenssl.pyopenssl_weak_key:PyopensslWeakKey
 
     # precli/rules/python/PyYAML/yaml_load.py
-    PRE0521 = precli.rules.python.PyYAML.yaml_load:YamlLoad
+    PY521 = precli.rules.python.PyYAML.yaml_load:YamlLoad
 
     # precli/rules/python/requests/no_certificate_verify.py
-    PRE0522 = precli.rules.python.requests.no_certificate_verify:NoCertificateVerify
+    PY522 = precli.rules.python.requests.no_certificate_verify:NoCertificateVerify
 
 [build_sphinx]
 all_files = 1
