Publish translation binary files with release
Upon release to PyPI or Test PyPI, the translation binary
files (*.mo) should also be included so that the strings
get translated depending on locale.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -28,6 +28,7 @@ jobs:
 
     - name: Build a binary wheel and a source tarball
       run: |
+        sh -c 'for lang in de en_GB es fr it ja ko pt_BR ru zh_CN zh_TW; do msgfmt -o precli/locale/$lang/LC_MESSAGES/messages.mo precli/locale/$lang/LC_MESSAGES/messages.po; done'
         python setup.py sdist bdist_wheel
 
     - name: Publish distribution to Test PyPI
