Ensure msgfmt is installed for publish
In order to compile po files to mo, msgfmt command must
be installed on the ubuntu build machine.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/.github/workflows/upload-asset.yml
+++ b/.github/workflows/upload-asset.yml
@@ -26,7 +26,9 @@ jobs:
         python-version: 3.12
 
     - name: Install dependencies
-      run: pip install setuptools wheel
+      run: |
+        sudo apt-get install gettext
+        pip install setuptools wheel
 
     - name: Build a binary wheel and a source tarball
       run: |
