--- a/setup.cfg
+++ b/setup.cfg
@@ -87,6 +87,9 @@ precli.rules.go =
     # precli/rules/go/stdlib/syscall_setuid_root.py
     GO004 = precli.rules.go.stdlib.syscall_setuid_root:SyscallSetuidRoot
 
+    # precli/rules/go/stdlib/crypto_unrestricted_bind.py
+    GO005 = precli.rules.go.stdlib.crypto_unrestricted_bind:CryptoUnrestrictedBind
+
 precli.rules.java =
     # precli/rules/java/stdlib/javax_crypto_weak_cipher.py
     JAV001 = precli.rules.java.stdlib.javax_crypto_weak_cipher:WeakCipher
