New GO rule using net Listen as unrestricted address
Checks for net package Listen function on whether the
address is INADDR_ANY or IN6ADDR_ANY.

Rule ID GO006

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -90,6 +90,9 @@ precli.rules.go =
     # precli/rules/go/stdlib/crypto_unrestricted_bind.py
     GO005 = precli.rules.go.stdlib.crypto_unrestricted_bind:CryptoUnrestrictedBind
 
+    # precli/rules/go/stdlib/net_unrestricted_bind.py
+    GO006 = precli.rules.go.stdlib.net_unrestricted_bind:NetUnrestrictedBind
+
 precli.rules.java =
     # precli/rules/java/stdlib/javax_crypto_weak_cipher.py
     JAV001 = precli.rules.java.stdlib.javax_crypto_weak_cipher:WeakCipher
