Go rule to check function that do not permit a timeout
Several functions in the net/http package allow starting an http
server but do not permit a way to set timeouts. This opens up
the server to clients that might abuse it.

Rule ID: GO007

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -93,6 +93,9 @@ precli.rules.go =
     # precli/rules/go/stdlib/net_unrestricted_bind.py
     GO006 = precli.rules.go.stdlib.net_unrestricted_bind:NetUnrestrictedBind
 
+    # precli/rules/go/stdlib/net_http_no_timeout.py
+    GO007 = precli.rules.go.stdlib.net_http_no_timeout:NetHttpNoTimeout
+
 precli.rules.java =
     # precli/rules/java/stdlib/javax_crypto_weak_cipher.py
     JAV001 = precli.rules.java.stdlib.javax_crypto_weak_cipher:WeakCipher
