--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Copyright 2024 Secure Sauce LLC
+# Copyright 2025 Secure Sauce LLC
 # SPDX-License-Identifier: BUSL-1.1
 typing-extensions==4.13.2;python_version<"3.11"
 tomli==2.2.1; python_version<"3.11"
@@ -12,3 +12,4 @@ jschema-to-python==1.2.3
 tree-sitter-go==0.23.4
 tree-sitter-java==0.23.5
 tree-sitter-python==0.23.6
+pyyaml==6.0.2
