--- a/custom/python-requests-insecure-verify.yaml
+++ b/custom/python-requests-insecure-verify.yaml
@@ -1,10 +1,10 @@
-id: CU001
+id: PY001C
 name: requests-insecure-verify
 language: python
 description: >
-  The 'verify=False' option disables TLS certificate validation when using requests.
-  This can expose the application to man-in-the-middle (MITM) attacks by allowing
-  untrusted or malicious servers to masquerade as legitimate ones.
+  The 'verify=False' option disables TLS certificate validation when using
+  requests. This can expose the application to man-in-the-middle (MITM) attacks
+  by allowing untrusted or malicious servers to masquerade as legitimate ones.
 cwe: 295
 severity: error
 message: "Setting 'verify=False' disables SSL certificate verification"
