--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ classifiers =
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
     Programming Language :: Python :: 3.13
+    Programming Language :: Python :: 3.14
     Topic :: Security
 url = https://github.com/securesauce/precli
 download_url = https://pypi.org/project/precli/#files
